chore(input-as-button): fix filter label word-wrap

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -97,6 +97,8 @@ font-size: small;
 
 %check-input-as-button {
     margin: 1rem 0.5rem;
+    white-space: normal; 
+    text-align: center;
 
     input {
         @extend %screen-reader-only
